<resources>
    <string name="app_name">Party Gatherer</string>

    <string name="label_date">Date</string>
    <string name="label_time">Time</string>

    <string name="template_time_hh_mm">%1$2d:%2$2d</string>
    <string name="et_hint_title">Title</string>
    <string name="et_hint_description">Description</string>
    <string name="et_hint_location">Location</string>
    <string name="label_create">Create</string>
</resources>
